# dev-env-helper

./: package-lock.json  package.json
.github/workflows/: build.yml
dev-env-helper/: README.md  index.html
dev-env-helper/src/: main.ts  styles.css
dev-env-helper/src-tauri/: Cargo.toml
dev-env-helper/src-tauri/capabilities/: default.json
dev-env-helper/src-tauri/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
