[package]
name = "dev-env-helper"
version = "0.1.0"
description = "OpenClaw 一键安装器"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "dev_env_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tar = "0.4"
zip = "2"
flate2 = "1"
xz2 = "0.1"
dirs = "6"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
